--- a/index.html
+++ b/index.html
@@ -3,46 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Landing Page</title>
+    <title>Tribute to Mahatma Gandhi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Landing Page</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Tribute to Mahatma Gandhi</h1>
     </header>
-
-    <section class="hero">
-        <h2>Discover Something Amazing</h2>
-        <p>Your journey to success starts here.</p>
-        <a href="#" class="btn">Get Started</a>
+    <section class="container">
+        <img src="gandhi.jpg" alt="Mahatma Gandhi" class="profile-img">
+        <h2>About Mahatma Gandhi</h2>
+        <p>Mahatma Gandhi, also known as the Father of the Nation in India, was a leader of non-violent resistance against British rule. His principles of truth and non-violence (Satyagraha) inspired movements for civil rights and freedom worldwide.</p>
+        
+        <h2>Why I Admire Mahatma Gandhi</h2>
+        <ul>
+            <li>Champion of non-violence and peace</li>
+            <li>Fought for India's independence</li>
+            <li>Inspired civil rights movements worldwide</li>
+            <li>Lived a life of simplicity and truth</li>
+        </ul>
     </section>
-
-    <section id="about">
-        <h2>About Us</h2>
-        <p>We provide top-notch solutions to help you achieve your goals.</p>
-    </section>
-
-    <section id="services">
-        <h2>Our Services</h2>
-        <div class="service-box">
-            <h3>Web Design</h3>
-            <p>Beautiful and user-friendly websites.</p>
-        </div>
-        <div class="service-box">
-            <h3>SEO</h3>
-            <p>Boost your online presence with our SEO services.</p>
-        </div>
-    </section>
-
     <footer>
-        <p>© 2025 My Landing Page | All Rights Reserved</p>
+        <p>Designed with admiration by Gowthami</p>
     </footer>
 </body>
 </html>
